added checking function for character types

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
 
-    <div class="container-main">
+    <div class="flex-container-main">
         <div class="row">
             <div class="col-md-12">
                 <h1>Password Generator</h1>
             </div>
         </div>
        
-            <div class="container-content">
+            <div class="flex-container-content">
                 <h2 id="h2header">Generate a Password</h2>
                 <hr id="hr-one">
                 <div class="row">
